<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputString_Edit_text_name"
        android:layout_width="310dp"
        android:layout_height="88dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_name"
        android:hint="@string/inputString_Edit_text_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:autofillHints="" />

    <EditText
        android:id="@+id/inputString_Edit_text_age"
        android:layout_width="292dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_age"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_age"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_name"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_name"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_name" />

    <EditText
        android:id="@+id/inputString_Edit_text_city"
        android:layout_width="293dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_city"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_city"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_age"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_age" />

    <EditText
        android:id="@+id/inputString_Edit_text_College_Name"
        android:layout_width="288dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_College_Name"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_College_Name"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_city"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_city"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_city" />

    <EditText
        android:id="@+id/inputString_Edit_text_Profession"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_Profession"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_Profession"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_College_Name"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_College_Name"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_College_Name" />

    <EditText
        android:id="@+id/inputString_Edit_text_Animal_Type"
        android:layout_width="311dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_Animal_Type"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_Animal_Type"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_Profession"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_Profession"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_Profession" />

    <EditText
        android:id="@+id/inputString_Edit_text_Pet_Name"
        android:layout_width="296dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputString_Edit_text_Pet_Name"
        android:inputType="textPersonName"
        android:text="@string/inputString_Edit_text_Pet_Name"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_Animal_Type"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_Animal_Type"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_Animal_Type" />

    <TextView
        android:id="@+id/toryString_Text_view"
        android:layout_width="305dp"
        android:layout_height="134dp"
        android:layout_marginTop="8dp"
        android:text="@string/storyString_Text_view"
        app:layout_constraintEnd_toEndOf="@+id/inputString_Edit_text_Pet_Name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputString_Edit_text_Pet_Name"
        app:layout_constraintTop_toBottomOf="@+id/inputString_Edit_text_Pet_Name" />

    <Button
        android:id="@+id/displayStory_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/displayStory_Button"
        app:layout_constraintEnd_toEndOf="@+id/toryString_Text_view"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/toryString_Text_view"
        app:layout_constraintTop_toBottomOf="@+id/toryString_Text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>